--- a/requirements.txt
+++ b/requirements.txt
@@ -29,6 +29,8 @@ langchain-huggingface==0.1.2
 langchain-text-splitters==0.3.7
 langsmith==0.3.17
 llama-cpp-python==0.3.8
+llama-index-embeddings-huggingface
+llama-index-llms-llama-cpp
 markupsafe==3.0.2
 marshmallow==3.26.1
 mpmath==1.3.0
@@ -71,3 +73,4 @@ tzdata==2025.1
 urllib3==2.3.0
 yarl==1.18.3
 zstandard==0.23.0
+chromadb
