--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,7 @@ dependencies = [
     "python-dotenv>=1.1.0",
     "sentence-transformers>=4.1.0",
     "unstructured[all-docs,pdf]>=0.17.2",
-    "streamlit>=1.50.0",
+    "streamlit>=1.50.0"
 ]
 
 
