--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "huggingface-hub[hf-xet]>=0.30.2",
     "langchain-community>=0.3.21",
     "langchain-google-genai>=2.1.5",
+    "langchain-openai>=0.3.0",
     "langchain-huggingface>=0.3.0",
     "langchain-chroma>=0.2.6",
     "pypdf>=5.4.0",
