refactor: update initial message and enhance message formatting in UI

--- a/app_config.yml
+++ b/app_config.yml
@@ -12,4 +12,4 @@ model:
   name: gemini-2.5-flash-preview-05-20
 
 initial_message:
-  answer: "Welcome! Ask me anything about wine."
+  answer: "Hi there! Ask me anything about wine."
