--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,9 @@ dependencies = [
     "unstructured[all-docs,pdf]>=0.17.2",
     "streamlit>=1.50.0",
     "langfuse>=3.5.0",
+    "numpy>=1.21.0,<2.0.0",
+    "google-genai>=1.39.1",
+    "jsonref"
 ]
 
 
