refactor: loading data pipeline

--- a/app_config.yml
+++ b/app_config.yml
@@ -3,9 +3,9 @@ chroma:
     host: localhost
     port: 8000
   chunking:
-    strategy: basic  # basic, by_title, semantic
-    chunk_size: 512
-    chunk_overlap: 128
+    strategy: by_title  # basic, by_title, semantic
+    chunk_size: 1024
+    chunk_overlap: 256
   settings:
     batch_size: 2500
     embedder: sentence-transformers/all-MiniLM-L6-v2
