--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,7 +19,9 @@ dependencies = [
     "langfuse>=3.5.0",
     "numpy>=1.21.0,<2.0.0",
     "google-genai>=1.39.1",
-    "jsonref"
+    "jsonref",
+    "cellartracker>=0.4.0",
+    "python-dateutil>=2.8.0"
 ]
 
 
