--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,7 +21,8 @@ dependencies = [
     "google-genai>=1.39.1",
     "jsonref",
     "cellartracker>=0.4.0",
-    "python-dateutil>=2.8.0"
+    "python-dateutil>=2.8.0",
+    "pydantic>=2.0.0"
 ]
 
 
