feat: enhance Docker deployment setup and configuration for ChromaDB

--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,17 @@
-# API Keys for LLM providers
+# Google Gemini API (free tier)
+# Get your key from: https://makersuite.google.com/app/apikey
 GOOGLE_API_KEY=your_google_api_key_here
-OPENAI_API_KEY=your_openai_api_key_here
 
-# Langfuse tracing
-LANGFUSE_PUBLIC_KEY=your_langfuse_public_key_here
-LANGFUSE_SECRET_KEY=your_langfuse_secret_key_here
+# ChromaDB connection (Docker Compose will set these automatically)
+CHROMA_HOST=chromadb
+CHROMA_PORT=8000
 
-# Cellar Tracker credentials
-CELLAR_TRACKER_USERNAME=your_cellartracker_username
-CELLAR_TRACKER_PASSWORD=your_cellartracker_password
+# Optional: CellarTracker import credentials
+CELLAR_TRACKER_USERNAME=your_username
+CELLAR_TRACKER_PASSWORD=your_password
+
+# Optional: Langfuse observability (free tier)
+# Get keys from: https://cloud.langfuse.com
+LANGFUSE_PUBLIC_KEY=pk-lf-...
+LANGFUSE_SECRET_KEY=sk-lf-...
 
