--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,11 @@
+name: pour-decisions
+
 services:
   app:
     build:
       context: .
       dockerfile: Dockerfile
-    container_name: wine_rag_app
+    container_name: pour_decisions_app
     ports:
       - "8501:8501"
     volumes:
@@ -29,7 +31,7 @@ services:
 
   chromadb:
     image: chromadb/chroma:latest
-    container_name: wine_rag_chromadb
+    container_name: pour_decisions_chromadb
     volumes:
       - chroma_data:/chroma/chroma
     environment:
@@ -49,9 +51,3 @@ services:
 volumes:
   chroma_data:
     driver: local
-
-
-      
-
-
-
