--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,7 @@
-# Google Gemini API (free tier)
-# Get your key from: https://makersuite.google.com/app/apikey
+# Google Gemini API
 GOOGLE_API_KEY=your_google_api_key_here
 
-# ChromaDB connection (Docker Compose will set these automatically)
+# ChromaDB connection
 CHROMA_HOST=chromadb
 CHROMA_PORT=8000
 
@@ -14,4 +13,8 @@ CELLAR_TRACKER_PASSWORD=your_password
 # Get keys from: https://cloud.langfuse.com
 LANGFUSE_PUBLIC_KEY=pk-lf-...
 LANGFUSE_SECRET_KEY=sk-lf-...
+
+# RAG configuration
+WINE_BOOKS_PATH=path-to-exteral-data
+EMBEDDING_MODEL=sentence-transformers/embedding-model-name
 
