--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "chromadb>=1.3.7",
     "dotenv>=0.9.9",
     "instructor>=1.13.0",
+    "langchain>=1.2.0",
     "langchain-core>=1.2.2",
     "langchain-google-genai>=4.1.1",
     "langchain-huggingface>=1.2.0",
