enhance hybrid retrieval by integrating BM25 search and caching mechanism

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ dependencies = [
     "langgraph>=1.0.5",
     "omegaconf>=2.3.0",
     "plotly>=6.5.0",
+    "rank-bm25>=0.2.2",
     "sentence-transformers>=5.2.0",
     "streamlit>=1.52.2",
     "torch==2.2.2; sys_platform == 'darwin'",
