--- a/app_config.yml
+++ b/app_config.yml
@@ -26,6 +26,12 @@ chroma:
     enable_reranking: true              # enable cross-encoder reranking
     reranker_model: "cross-encoder/ms-marco-MiniLM-L-6-v2"  # reranker model
     rerank_top_k: 5                     # number of results after reranking
+    # Context compression settings (reduces token usage)
+    enable_compression: false           # enable context compression before LLM
+    compression_max_chars: 8000         # max context size (~2000 tokens)
+    # Metadata boosting (uses wine entity extraction)
+    enable_metadata_boost: true         # boost results matching query entities
+    metadata_boost_factor: 0.1          # score boost per matching entity
   settings:
     batch_size: 2500
     embedder: ${oc.env:EMBEDDING_MODEL} # embedding agents for retrieval
